# python-directory-watch

./: .gitignore  LICENSE  README.md  pyproject.toml
pydirwatch/: __init__.py  test_scratch.py  test_watch.py  watch.py
python-directory-watch/: scratch.py  test_scratch.py
test/: integration_STOP.py  stress_test.py  test_watch.py
