[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
# [tool.hatch.build.targets.wheel]
# packages = ["/pt"]


[project]
name = "python-directory-watch"
# dynamic = ["version"]
version = "0.00.00"
requires-python = ">= 3.8"
# optional-dependencies = ["pytest>=7.1"]
authors = [{name = "Noah Ridge", email = "noah.c.ridge@gmail.com"}]
readme = "README.md"


[tool.hatch.build.targets.wheel]
packages = ["/pydirwatch"]