[build-system]
requires = ["hatchling","hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
# path = "pydirwatch/__init__.py"
source = "vcs"

[project]
name = "python-directory-watch"
dynamic = ["version"]
# version = "0.00.00"
requires-python = ">= 3.8"
# optional-dependencies = ["pytest>=7.1"]
authors = [{name = "Noah Ridge", email = "hello@noahcridge.com"}]
readme = "README.md"


[tool.hatch.build.targets.wheel]
packages = ["/pydirwatch"]